working PSF convolution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,22 @@
 project(echellesimulator)
 
-add_executable( echellesimulator cvmatandqimage.cpp efficiency.cpp slit.cpp matrixsimulator.cpp main.cpp )
+
 cmake_minimum_required(VERSION 2.8)
 find_package( OpenCV REQUIRED )
-find_package(CUDA QUIET REQUIRED)
-install(TARGETS echellesimulator RUNTIME DESTINATION bin)
+set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
+
+set (LINK_LIBS ${LINK_LIBS} ${OpenCV_LIBS})
+#find_package(CUDA QUIET REQUIRED)
+
+find_package(HDF5 COMPONENTS HL REQUIRED)
+include_directories(SYSTEM ${HDF5_INCLUDE_DIRS} ${HDF5_HL_INCLUDE_DIR})
+include_directories(SYSTEM $OPENCV_INCLUDE_DIRS)
+set (LINK_LIBS ${LINK_LIBS} ${HDF5_LIBRARIES})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 # set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-target_link_libraries( echellesimulator ${OpenCV_LIBS} )
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
-
-# Find the QtWidgets library
-find_package(Qt5Widgets)
-find_package(Qt5Core)
-# Use the Widgets module from Qt 5.
-target_link_libraries(echellesimulator Qt5::Widgets)
-
+add_executable( echellesimulator helper.cpp source.cpp efficiency.cpp slit.cpp matrixsimulator.cpp main.cpp noise.cpp noise.h PSF.cpp PSF.h)
+target_link_libraries(echellesimulator ${LINK_LIBS})
