--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package(CUDA QUIET REQUIRED)
 find_package(HDF5 COMPONENTS HL REQUIRED)
 include_directories(SYSTEM ${HDF5_INCLUDE_DIRS} ${HDF5_HL_INCLUDE_DIR})
 include_directories(SYSTEM $OPENCV_INCLUDE_DIRS)
+include_directories(src)
+include_directories(include)
 set (LINK_LIBS ${LINK_LIBS} ${HDF5_LIBRARIES})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
@@ -19,5 +21,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2")
 # set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
-add_executable( echellesimulator helper.cpp source.cpp efficiency.cpp slit.cpp matrixsimulator.cpp main.cpp noise.cpp noise.h PSF.cpp PSF.h)
+add_executable( echellesimulator src/helper.cpp src/source.cpp src/efficiency.cpp src/slit.cpp src/matrixsimulator.cpp src/main.cpp src/noise.cpp src/PSF.cpp)
 target_link_libraries(echellesimulator ${LINK_LIBS})
