added phoenix spectrum. 2d warping not working anymore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,15 @@ find_package( OpenCV REQUIRED )
 set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
 
 set (LINK_LIBS ${LINK_LIBS} ${OpenCV_LIBS})
-find_package(CUDA QUIET REQUIRED)
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/src/CMakeModules/")
+
+INCLUDE("${CMAKE_SOURCE_DIR}/src/CMakeModules/FindCCFITS.cmake")
+set (LINK_LIBS ${LINK_LIBS} ${CCFITS_LIBRARIES})
+
+find_package(CCFITS REQUIRED)
+# Install stage
+INSTALL_FILES("${CMAKE_ROOT}/Modules" FILES "${CMAKE_SOURCE_DIR}/FindCCOIFITS.cmake")
 
 find_package(HDF5 COMPONENTS HL REQUIRED)
 include_directories(SYSTEM ${HDF5_INCLUDE_DIRS} ${HDF5_HL_INCLUDE_DIR})
@@ -17,8 +25,8 @@ include_directories(include)
 set (LINK_LIBS ${LINK_LIBS} ${HDF5_LIBRARIES})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2")
-# set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
 add_executable( echellesimulator src/helper.cpp src/source.cpp src/efficiency.cpp src/slit.cpp src/matrixsimulator.cpp src/main.cpp src/noise.cpp src/PSF.cpp)
