first CUDA implementation Not working yet. before removing all eigen stuff and also before replacing maps with vectors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,23 @@ project(echellesimulator)
 
 
 cmake_minimum_required(VERSION 2.8)
+set(CMAKE_CXX_STANDARD 11)
 find_package( OpenCV REQUIRED )
 #add_definitions(-DUSE_GPU)
-set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
+add_definitions(-DUSE_CUDA)
+
+find_package(CUDA QUIET REQUIRED)
+
+include_directories(
+        kernels
+        utility
+        /usr/local/cuda-8.0/samples/common/inc
+        /usr/local/cuda-8.0/include
+)
+
+
+
+#set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
 include_directories(/home/stuermer/Downloads/eigen/)
 set (LINK_LIBS ${LINK_LIBS} ${OpenCV_LIBS})
 
@@ -25,12 +39,18 @@ include_directories(SYSTEM ${HDF5_INCLUDE_DIRS} ${HDF5_HL_INCLUDE_DIR})
 include_directories(SYSTEM $OPENCV_INCLUDE_DIRS)
 include_directories(src)
 include_directories(include)
-set (LINK_LIBS ${LINK_LIBS} ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES} ${CCFITS_LIB} ${CFITSIO_LIBRARY})
+MESSAGE(STATUS ${CUDA_curand_LIBRARY})
+set (LINK_LIBS ${LINK_LIBS} ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES} ${CCFITS_LIB} ${CFITSIO_LIBRARY} ${CUDA_curand_LIBRARY} ${CUDA_LIBRARIES})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 #set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_C_FLAGS} -fopenmp -O3")
+#set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_C_FLAGS} -O3")
 set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_C_FLAGS} -pg")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
-add_executable(echellesimulator src/main.cpp src/helper.cpp src/source.cpp src/efficiency.cpp src/Slit.cpp src/matrixsimulator.cpp src/noise.cpp src/PSF.cpp src/CCD.cpp src/hdf5opencv.cpp include/csv_reader.h)
+#link_directories(
+#        ${CUDA_curand_LIBRARY}
+#)
+
+add_executable(echellesimulator src/main.cpp src/helper.cpp src/source.cpp src/efficiency.cpp src/Slit.cpp src/matrixsimulator.cpp src/noise.cpp src/PSF.cpp src/CCD.cpp src/hdf5opencv.cpp include/csv_reader.h include/random_generator.h)
 target_link_libraries(echellesimulator ${LINK_LIBS})
