--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,11 +46,10 @@ ELSEIF(CMAKE_BUILD_TYPE MATCHES RelNoParallel)
     message("No Parallelism.")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
     set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -O3")
-ELSEIF(CMAKE_BUILD_TYPE MATCHES Profile)
-    set(-CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pg")
-    set(-CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -std=c++11  -pg")
-    set(-CMAKE_SHARED_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} -std=c++11  -pg")
-    set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_C_FLAGS} -O3")
+ELSEIF(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
+    message("profiling build")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -g")
+    set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -O3 -g")
 ENDIF()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
