--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,19 @@ language:
   - cpp
 compiler:
   - gcc
+addons:
+  apt:
+    packages:
+      - libopencv-dev
+      - libhdf5-serial-dev
+      - libhdf5-dev
+      - libcurl
+      - cmake
+script:
+    ############################################################################
+    # Build main and tests
+    ############################################################################
+     - mkdir -p build
+     - cd build
+     - cmake -DCMAKE_BUILD_TYPE=Release .. 
+     - make
