--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,9 @@ include_directories(src)
 include_directories(include)
 
 # include eigen library
-SET( EIGEN3_INCLUDE_DIR $ENV{EIGEN3_INCLUDE_DIR} )
-IF( NOT EIGEN3_INCLUDE_DIR )
-    MESSAGE( FATAL_ERROR "Please point the environment variable EIGEN3_INCLUDE_DIR to the include directory of your Eigen3 installation.")
-ENDIF()
-INCLUDE_DIRECTORIES (${EIGEN3_INCLUDE_DIR})
 
+find_package(Eigen3 REQUIRED)
+include_directories(${EIGEN3_INCLUDE_DIR})
 
 include_directories( ${HDF5_INCLUDE_DIRS} )
 
