--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,7 @@ include_directories(src)
 include_directories(include)
 
 # include eigen library
-
--SET( EIGEN3_INCLUDE_DIR $ENV{EIGEN3_INCLUDE_DIR} )
--IF( NOT EIGEN3_INCLUDE_DIR )
--    MESSAGE( FATAL_ERROR "Please point the environment variable EIGEN3_INCLUDE_DIR to the include directory of your Eigen3 installation.")
--ENDIF()
--INCLUDE_DIRECTORIES (${EIGEN3_INCLUDE_DIR})
+find_package(Eigen3 REQUIRED NO_MODULE)
 
 set (LINK_LIBS ${LINK_LIBS} ${HDF5_LIBRARIES} ${CCFITS_LIB} ${CFITSIO} ${HDF5_HL_LIBRARIES} curl)
 MESSAGE(${LINK_LIBS})
