updated for travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ addons:
       - mercurial
       - cmake
 script:
+     - pwd
      - hg clone https://bitbucket.org/eigen/eigen/
     ############################################################################
     # Build main and tests
     ############################################################################
      - mkdir -p build
      - cd build
+     - pwd
      - cmake -DCMAKE_BUILD_TYPE=Release -DEIGEN3_INCLUDE_DIR=../eigen/ ..
      - make
