--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,11 @@ matrix:
             - cmake
           sources: &sources
             - ubuntu-toolchain-r-test
-          
+
+install:
+    - if [ "$CXX" = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi
+    - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
+
 script:
     ############################################################################
     # Build main and tests
