First Implementation of LineList

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/src/CMakeModules
 
 INSTALL_FILES("${CMAKE_ROOT}/Modules" FILES "${CMAKE_SOURCE_DIR}/FindCCOIFITS.cmake")
 
-FIND_LIBRARY(CCFITS_LIB CCfits /data/CppLibs/CCFits/usr/local/lib)
-include_directories(/data/CppLibs/CCFits/usr/local/include)
+FIND_LIBRARY(CCFITS_LIB CCfits /data/CppLibs/CCfits/build/usr/local/lib)
+include_directories(/data/CppLibs/CCfits/build/usr/local/include)
 include_directories(/data/CppLibs/opencv/include/opencv)
 
 find_package(HDF5 COMPONENTS C CXX HL REQUIRED)
@@ -30,24 +30,24 @@ MESSAGE(${LINK_LIBS})
 #for optimized speed use following flags
 
 IF(CMAKE_BUILD_TYPE MATCHES Debug)
-    message("Debug build.")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-    set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 ")
+ message("Debug build.")
+ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+ set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 ")
 ELSEIF(CMAKE_BUILD_TYPE MATCHES Release)
-    message("Release build.")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp -O3")
-    set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -fopenmp -O3")
+ message("Release build.")
+ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp -O3")
+ set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -fopenmp -O3")
 ELSEIF(CMAKE_BUILD_TYPE MATCHES RelNoParallel)
-    message("No Parallelism.")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
-    set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -O3")
+ message("No Parallelism.")
+ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
+ set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -O3")
 ELSEIF(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
-    message("profiling build")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -g")
-    set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -O3 -g")
+ message("profiling build")
+ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -g")
+ set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -O3 -g")
 ENDIF()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
-add_executable(echellesimulator src/main.cpp src/helper.cpp src/source.cpp src/efficiency.cpp src/Slit.cpp src/matrixsimulator.cpp src/noise.cpp src/PSF.cpp src/CCD.cpp src/hdf5opencv.cpp include/csv_reader.h src/telescope.cpp include/telescope.h)
+add_executable(echellesimulator src/main.cpp src/helper.cpp src/source.cpp src/efficiency.cpp src/Slit.cpp src/matrixsimulator.cpp src/noise.cpp src/PSF.cpp src/CCD.cpp src/hdf5opencv.cpp include/csv_reader.h src/telescope.cpp include/telescope.h include/argagg.hpp)
 target_link_libraries(echellesimulator ${LINK_LIBS})
