removed opencv dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,25 @@
 project(echellesimulator)
 
 cmake_minimum_required(VERSION 3.0)
-find_package( OpenCV REQUIRED HINTS /data/CppLibs/opencv/)
-set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
-set(LINK_LIBS ${LINK_LIBS} ${OpenCV_LIBS})
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/src/CMakeModules/")
-
 INSTALL_FILES("${CMAKE_ROOT}/Modules" FILES "${CMAKE_SOURCE_DIR}/FindCCOIFITS.cmake")
 
-FIND_LIBRARY(CCFITS_LIB CCfits /data/CppLibs/CCfits/build/usr/local/lib)
-include_directories(/data/CppLibs/CCfits/build/usr/local/include)
-include_directories(/data/CppLibs/opencv/include/opencv)
+FIND_LIBRARY(CCFITS_LIB CCfits ${CCFITS_HINT})
+include_directories(${CCFITS_INCLUDE_HINT})
 
 find_package(HDF5 COMPONENTS C CXX HL REQUIRED)
+FIND_LIBRARY(CFITSIO cfitsio ${CFITSIO_HINT})
 
-FIND_LIBRARY(CFITSIO cfitsio /usr/local/lib64)
-
-include_directories(SYSTEM $OPENCV_INCLUDE_DIRS)
 include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 message(${CMAKE_SOURCE_DIR})
-#find_package(Qt5Core)
 
 INCLUDE_DIRECTORIES (${HDF5_INCLUDE_DIRS})
-#find_package(Qt5 REQUIRED COMPONENTS Core Widgets Gui )
 
 set (LINK_LIBS ${LINK_LIBS} ${HDF5_LIBRARIES} ${CCFITS_LIB} ${CFITSIO} ${HDF5_HL_LIBRARIES} curl)
 MESSAGE(${LINK_LIBS})
-#for optimized speed use following flags
 
+#for optimized speed use following flags
 IF(CMAKE_BUILD_TYPE MATCHES Debug)
  message("Debug build.")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -49,5 +40,10 @@ ENDIF()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
-add_executable(echellesimulator src/main.cpp src/helper.cpp src/source.cpp src/efficiency.cpp src/Slit.cpp src/matrixsimulator.cpp src/noise.cpp src/PSF.cpp src/CCD.cpp src/hdf5opencv.cpp include/csv_reader.h src/telescope.cpp include/telescope.h include/argagg.hpp)
+file(GLOB SOURCES
+        include/*.h
+        src/*.cpp
+        )
+
+add_executable(echellesimulator src/main.cpp src/helper.cpp src/source.cpp src/efficiency.cpp src/Slit.cpp src/matrixsimulator.cpp src/noise.cpp src/PSF.cpp src/CCD.cpp include/csv_reader.h src/telescope.cpp ${SOURCES})
 target_link_libraries(echellesimulator ${LINK_LIBS})
