--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 project(echellesimulator)
+include(ExternalProject)
 
 cmake_minimum_required(VERSION 3.0)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/src/CMakeModules/")
@@ -38,6 +39,17 @@ ELSEIF(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
  set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -O3 -g")
 ENDIF()
 
+# Download JSON c++
+ExternalProject_Add(fmt
+        GIT_REPOSITORY https://github.com/fmtlib/fmt.git
+#        GIT_TAG v5.0.0
+        INSTALL_COMMAND ""
+        UPDATE_COMMAND ""
+        )
+ExternalProject_Get_Property(fmt source_dir)
+set(FMT_INCLUDE_DIR ${source_dir}/include)
+MESSAGE(${FMT_INCLUDE_DIR})
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
 file(GLOB SOURCES
@@ -46,4 +58,5 @@ file(GLOB SOURCES
         )
 
 add_executable(echellesimulator src/main.cpp src/helper.cpp src/source.cpp src/efficiency.cpp src/Slit.cpp src/matrixsimulator.cpp src/noise.cpp src/PSF.cpp src/CCD.cpp include/csv_reader.h src/telescope.cpp ${SOURCES})
-target_link_libraries(echellesimulator ${LINK_LIBS})
+target_include_directories(echellesimulator PRIVATE ${FMT_INCLUDE_DIR})
+target_link_libraries(echellesimulator ${LINK_LIBS} )
